[package]
name = "masonry"
version.workspace = true # We mimic Xilem's version
description = "Traits and types of the Masonry toolkit."
keywords = ["gui", "ui", "toolkit"]
categories = ["gui", "internationalization", "accessibility"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = []
tracy = ["masonry_core/tracy"]
testing = ["dep:masonry_testing"]

[dependencies]
accesskit.workspace = true
dpi.workspace = true
masonry_core.workspace = true
masonry_testing = { workspace = true, optional = true }
parley.workspace = true
tracing = { workspace = true, features = ["default"] }
ui-events.workspace = true
vello.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
float-cmp = { version = "0.10.0", features = ["std"], default-features = false }
image = { workspace = true, features = ["png"] }
insta = { version = "1.43.2" }
masonry_testing = { workspace = true }
masonry_winit.workspace = true

# Make wgpu use tracing for its spans.
profiling = { version = "1.0.17", features = ["profile-with-tracing"] }

[lints]
workspace = true

[[example]]
name = "calc_masonry"
# This actually enables scraping for all examples, not just this one.
# However it is possible to set doc-scrape-examples to false for other specific examples.
doc-scrape-examples = true
