[package]
name = "masonry"
version.workspace = true # We mimic Xilem's version
description = "Traits and types of the Masonry toolkit."
keywords = ["gui", "ui", "toolkit"]
categories = ["gui", "internationalization", "accessibility"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude = ["screenshots", "examples/assets"]

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["masonry_core/default", "masonry_testing?/default", "vello/default"]
tracy = ["masonry_core/tracy"]
testing = ["dep:masonry_testing"]

[dependencies]
accesskit.workspace = true
dpi.workspace = true
masonry_core.workspace = true
masonry_testing = { workspace = true, optional = true }
parley.workspace = true
smallvec.workspace = true
tracing = { workspace = true, features = ["default"] }
vello.workspace = true
include_doc_path.workspace = true
resvg.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
divan.workspace = true
float-cmp = { version = "0.10.0", features = ["std"], default-features = false }
image = { workspace = true, features = ["png"] }
insta = { version = "1.46.1" }
masonry_testing = { workspace = true, features = ["default"] }
masonry_winit = { workspace = true, features = ["default"] }

# Make wgpu use tracing for its spans.
profiling = { version = "1.0.17", features = ["profile-with-tracing"] }

[lints]
workspace = true

[[bench]]
name = "widget_list"
# We use divan's harness instead of the default one.
harness = false
# Ensures the benchmark is ran included when running bare `cargo test`.
test = true

[[example]]
name = "calc_masonry"
# This actually enables scraping for all examples, not just this one.
# However it is possible to set doc-scrape-examples to false for other specific examples.
doc-scrape-examples = true
