[package]
name = "masonry_core"
version.workspace = true # We mimic Xilem's version
description = "Traits and types of the Masonry toolkit."
keywords = ["gui", "ui", "toolkit"]
categories = ["gui", "internationalization", "accessibility"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["vello/default"]
# Enables tracing using tracy if the default Masonry tracing is used.
# https://github.com/wolfpld/tracy can be connected to when this feature is enabled.
tracy = ["dep:tracing-tracy", "tracing-tracy/enable", "vello/wgpu-profiler"]

[dependencies]
accesskit.workspace = true
anymap3 = "1.0.1"
anymore.workspace = true
cursor-icon = "1.2.0"
dpi.workspace = true
parley.workspace = true
smallvec.workspace = true
time = { workspace = true, features = ["macros", "formatting"] }
tracing = { workspace = true, features = ["default"] }
tracing-core = { version = "0.1.33", default-features = false }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time"] }
tracing-tracy = { version = "0.11.4", optional = true }
tree_arena.workspace = true
ui-events.workspace = true
vello.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
tracing-wasm.workspace = true
web-time.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
float-cmp = { version = "0.10.0", features = ["std"], default-features = false }
image = { workspace = true, features = ["png"] }
insta = { version = "1.43.2" }

# Make wgpu use tracing for its spans.
profiling = { version = "1.0.17", features = ["profile-with-tracing"] }

[target.'cfg(target_os = "android")'.dependencies]
tracing_android_trace = "0.1.1"

[lints]
workspace = true
