[package]
name = "masonry_testing"
version.workspace = true # We mimic Xilem's version
description = "Data-oriented Rust UI design toolkit."
keywords = ["gui", "ui", "toolkit"]
categories = ["gui", "internationalization", "accessibility"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []
# rustdoc-scrape-examples tracking issue https://github.com/rust-lang/rust/issues/88791
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
masonry.workspace = true
vello.workspace = true
accesskit.workspace = true
smallvec.workspace = true
cursor-icon = "1.1.0"
wgpu.workspace = true
winit.workspace = true
dpi.workspace = true
image.workspace = true
tracing = { workspace = true, features = ["default"] }
tracing-tracy = { version = "0.11.4", optional = true }
ui-events-winit.workspace = true
pollster = "0.4.0"
accesskit_winit.workspace = true
wgpu-profiler = { optional = true, version = "0.22.0", default-features = false }
oxipng = { version = "9.1.5", default-features = false }
futures-intrusive = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time.workspace = true

[dev-dependencies]
masonry_widgets.workspace = true
parley.workspace = true
smallvec.workspace = true
tracing = { workspace = true, features = ["default"] }
ui-events.workspace = true
image = { workspace = true, features = ["png"] }
insta = { version = "1.43.1" }
accesskit.workspace = true
assert_matches = "1.5.0"

[lints]
workspace = true
