[package]
name = "masonry_testing"
version.workspace = true # We mimic Xilem's version
description = "Helper tools for writing unit tests for Masonry."
keywords = ["gui", "ui", "toolkit"]
categories = ["gui", "internationalization", "accessibility"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = []

[dependencies]
accesskit.workspace = true
cursor-icon = "1.1.0"
dpi.workspace = true
futures-intrusive = "0.5.0"
image = { workspace = true, features = ["png"] }
masonry_core.workspace = true
oxipng = { version = "9.1.5", default-features = false }
parley.workspace = true
pollster = "0.4.0"
smallvec.workspace = true
tracing = { workspace = true, features = ["default"] }
ui-events.workspace = true
vello.workspace = true
wgpu.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"

# Make wgpu use tracing for its spans.
profiling = { version = "1.0.16", features = ["profile-with-tracing"] }

[lints]
workspace = true
