[package]
name = "masonry_testing"
version.workspace = true # We mimic Xilem's version
description = "Helper tools for writing unit tests for Masonry."
keywords = ["gui", "ui", "toolkit"]
categories = ["gui", "internationalization", "accessibility"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["imaging_vello"]
imaging_vello = ["masonry_imaging/imaging_vello"]
imaging_vello_hybrid = ["masonry_imaging/imaging_vello_hybrid"]
imaging_vello_cpu = ["masonry_imaging/imaging_vello_cpu"]
imaging_skia = ["masonry_imaging/imaging_skia"]

[dependencies]
accesskit_consumer.workspace = true
futures-intrusive = "0.5.0"
image = { workspace = true, features = ["png"] }
masonry_imaging = { workspace = true, default-features = false }
masonry_core.workspace = true
oxipng = { version = "9.1.5", default-features = false }
tracing = { workspace = true, features = ["default"] }

[dev-dependencies]
assert_matches = "1.5.0"

# Make wgpu use tracing for its spans.
profiling = { version = "1.0.17", features = ["profile-with-tracing"] }

[lints]
workspace = true
