[package]
name = "masonry_widgets"
version.workspace = true # We mimic Xilem's version
description = "Default widget and property set for the Masonry toolkit."
keywords = ["gui", "ui", "toolkit"]
categories = ["gui", "internationalization", "accessibility"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []
# rustdoc-scrape-examples tracking issue https://github.com/rust-lang/rust/issues/88791
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]
default = []

[dependencies]
masonry.workspace = true
vello.workspace = true
accesskit.workspace = true
parley.workspace = true
ui-events.workspace = true
smallvec.workspace = true
cursor-icon = "1.1.0"
dpi.workspace = true
anymap3 = "1.0.1"
tracing = { workspace = true, features = ["default"] }

#[target.'cfg(test)'.dependencies]
#masonry_testing.workspace = true

[dev-dependencies]
masonry_testing.workspace = true
ui-events.workspace = true
image = { workspace = true, features = ["png"] }
insta = { version = "1.43.1" }
assert_matches = "1.5.0"
float-cmp = { version = "0.10.0", features = ["std"], default-features = false }

# Make wgpu use tracing for its spans.
profiling = { version = "1.0.16", features = ["profile-with-tracing"] }

[lints]
workspace = true
