[package]
name = "masonry_winit"
version.workspace = true # We mimic Xilem's version
description = "Data-oriented Rust UI design toolkit."
keywords = ["gui", "ui", "toolkit"]
categories = ["gui", "internationalization", "accessibility"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []
# rustdoc-scrape-examples tracking issue https://github.com/rust-lang/rust/issues/88791
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]
default = []
# Enables tracing using tracy if the default Masonry tracing is used.
# https://github.com/wolfpld/tracy can be connected to when this feature is enabled.
tracy = ["dep:tracing-tracy", "dep:wgpu-profiler", "wgpu-profiler/tracy", "masonry_core/tracy"]

[dependencies]
masonry_core.workspace = true
winit.workspace = true
tracing = { workspace = true, features = ["default"] }
tracing-tracy = { version = "0.11.4", optional = true }
ui-events-winit.workspace = true
pollster = "0.4.0"
accesskit_winit.workspace = true
wgpu-profiler = { optional = true, version = "0.25.0", default-features = false }
copypasta = "0.10.2"

[target.'cfg(target_os = "macos")'.dependencies]
# Enables masonry_core/default -> vello -> wgpu -> wgpu_hal -> metal,
# which we need to interact with CoreAnimation during window resizing.
# This is not a very elegant fix and also enables all other HAL's.
# Remove this once a feature gating solution is found.
# See: https://github.com/linebender/xilem/pull/1551
masonry_core = { workspace = true, features = ["default"] }

[dev-dependencies]
# We don't use the "workspace" dependency here, because this makes a loop in publishing.
# This does mean that this dev-dependency edge won't be recorded in the uploaded Cargo.toml,
# but that's only an issue for crater?
# See https://github.com/rust-lang/cargo/issues/4242
masonry = { path = "../masonry" }

[lints]
workspace = true
