[package]
name = "masonry_winit"
version.workspace = true # We mimic Xilem's version
description = "Data-oriented Rust UI design toolkit."
keywords = ["gui", "ui", "toolkit"]
categories = ["gui", "internationalization", "accessibility"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []
# rustdoc-scrape-examples tracking issue https://github.com/rust-lang/rust/issues/88791
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[example]]
name = "external_surface_subduction"
required-features = ["subduction", "imaging_vello"]

[features]
default = ["imaging_vello"]
imaging_vello = ["masonry_imaging/imaging_vello"]
imaging_vello_hybrid = ["masonry_imaging/imaging_vello_hybrid"]
imaging_skia = ["masonry_imaging/imaging_skia"]
subduction = ["dep:subduction_core", "dep:subduction_backend_wgpu"]
# Enables tracing using tracy if the default Masonry tracing is used.
# https://github.com/wolfpld/tracy can be connected to when this feature is enabled.
tracy = [
    "dep:tracing-tracy",
    "dep:vello",
    "dep:wgpu-profiler",
    "wgpu-profiler/tracy",
    "masonry_core/tracy",
    "vello/wgpu-profiler",
]

[dependencies]
masonry_core.workspace = true
winit.workspace = true
tracing = { workspace = true, features = ["default"] }
tracing-tracy = { version = "0.11.4", optional = true }
ui-events-winit.workspace = true
pollster = "0.4.0"
accesskit_winit.workspace = true
masonry_imaging = { workspace = true, default-features = false }
vello = { workspace = true, optional = true }
wgpu.workspace = true
wgpu-profiler = { optional = true, version = "0.26.0", default-features = false }
copypasta = "0.10.2"
subduction_core = { git = "https://github.com/forest-rs/subduction.git", rev = "dcabbd3a9b1566a1dd7a6f2ad9f7d40d7be9a39b", optional = true }
subduction_backend_wgpu = { git = "https://github.com/forest-rs/subduction.git", rev = "dcabbd3a9b1566a1dd7a6f2ad9f7d40d7be9a39b", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# We need Metal to interact with CoreAnimation during window resizing.
wgpu = { workspace = true, features = ["metal"] }

[dev-dependencies]
# We don't use the "workspace" dependency here, because this makes a loop in publishing.
# This does mean that this dev-dependency edge won't be recorded in the uploaded Cargo.toml,
# but that's only an issue for crater?
# See https://github.com/rust-lang/cargo/issues/4242
masonry = { path = "../masonry" }

[lints]
workspace = true
